# filesizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
openspec/changes/web-ui/: design.md  proposal.md  tasks.md
openspec/changes/web-ui/specs/directory-scanner/: spec.md
openspec/changes/web-ui/specs/file-operations/: spec.md
openspec/changes/web-ui/specs/size-visualization/: spec.md
openspec/changes/web-ui/specs/web-server/: spec.md
src/filesizer/: __main__.py  cli.py  fileops.py  scanner.py  server.py
src/filesizer/static/: index.html
tests/: test_fileops.py  test_scanner.py  test_server.py
